syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.neoshell.nlp.messaging";
option java_outer_classname = "MessageAnalysisUtilProto";
option objc_class_prefix = "MAU";

package com.neoshell.nlp.messaging;

import "nlp_util_data.proto";

message MessageAnalysisContext {
  com.neoshell.nlp.core.NLPContext nlp_context = 1;
  int32 time_bucket_seconds = 2;
  int32 common_keyword_threshold = 3;
  int32 keyword_limit = 4;
  int32 min_messages_per_conversation = 5;
}

message Message {
  int64 id = 1;
  int64 timestamp_seconds = 2;
  string from_user_id = 3;
  string to_user_id = 4;
  string content = 5;
}

message Conversation {
  repeated Message message = 1;

  // The following information can be generated by analyzing messages.
  int64 start_timestamp_seconds = 2;
  int64 end_timestamp_seconds = 3;
  int64 num_words = 4;
  int64 num_non_stop_words = 5;
  repeated com.neoshell.nlp.core.WordInfo keyword = 6;
}
